[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain games project on hexlet"
authors = ["taiberi <harmankardon00@gmail.com>"]
repository = "https://github.com/Tayberi/python-project-lvl1"
license = "MIT"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
